--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "WEBKIT_DISABLE_COMPOSITING_MODE=1 tauri dev"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tauri-apps/cli": "^2.7.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
